# demos

cliff-demo/: .gitignore  README.md  setup.py
cliff-demo/cliff_demo/: hooked.py  main.py  pycon.py
stevedore-demo/: ChangeLog  README.md  requirements.txt  setup.cfg
stevedore-demo/stevedore_demo/common/: fields.py  simple.py
stevedore-demo/stevedore_demo/drivers/: my_drivers.py
stevedore-demo/stevedore_demo/extensions/: my_extension.py
