[metadata]
name = stevedore-demo
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Intended Audience :: Developers
    Environment :: Console

[entry_points]
mydrivers=
    simple = stevedore_demo.common.simple:Simple
    field = stevedore_demo.common.fields:FieldList
myextensions=
    simple2 = stevedore_demo.common.simple:Simple
    field2 = stevedore_demo.common.fields:FieldList

[wheel]
universal = 1